Fix color contrast error

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -5,7 +5,7 @@
 
 :root {
   /* Colors */
-  --primary-color: #6195c5;
+  --primary-color: #3F77AB;
   --secondary-color: #7feedb;
 
   /* Fonts */
